# STM32G431-SP

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  STM32G431-SP.ioc
App/Inc/: FreeRTOSConfig.h  app.hpp
App/Src/: app.cpp
Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c
Docs/: STM32G431.svd
Libs/MG996r_HAL/: mg996r_hal.cpp  mg996r_hal.hpp
Libs/MPU9250_HAL/: mpu9250_hal.c  mpu9250_hal.h
Libs/MPU9255_HAL/: mpu9255_hal.c  mpu9255_hal.h
